# nerve

./: .gitignore  AGENTS.md  Cargo.toml  LICENCE  README.md  checklist.me  crate_inventory.md  package.json  rust-toolchain.toml  todo.md
.adr/: 000_template.md  002_user_defined_llm_interactions_only.md  005_user-defined_processes_as_the_core_goal_of_nerve.md  006_how_the_cli_writes_files.md  007_context_size_and_budgetting.md  008_anti_insanity_clause.md  009_semantic_pattern_matcher.md  010_library_first_architecture_with_micro_cli.md  011_error_handling_and_recovery.md  012_proof_bundles_and_auditing.md  013_UI_interaction_primitives.md  014_networking_and_orchestration_binding.md  015_versioning_and_backwards_compatibility.md  016_testing_philosophy_and_gates.md  018_human_narration_and_story_style_logging.md  900_consitution.md  901_constitution.md
.done/: 001_todo.md  002_todo.md
.plans/: 00_project_structure.md
.primitives/: README.md
.specs/: 00_nerve.md  01_ui_applets.md  02_nrv_object.md  03_nrv_cli.md  04_nrv_orch_client.md  05_nrv_rs.md  06_xtask.md  07_nrv_core.md  08_nrv_ui_kit.md  09_nrv_ui.md  10_nrv_llm.md  11_llama_orch_cli_api.md  (+4 more)
crates/nrv-rs/: Cargo.toml
crates/nrv-rs/src/: lib.rs
crates/nrv-rs/src/apply/: mod.rs
crates/nrv-rs/src/dir/: mod.rs
crates/nrv-rs/src/exec/: mod.rs
crates/nrv-rs/src/file/: mod.rs
crates/nrv-rs/src/llm/: mod.rs  toolkit.rs
crates/nrv-rs/tests/: bdd.rs
crates/nrv-rs/tests/features/: apply_diff.feature  dir_ops.feature  exec_run.feature  file_ops.feature  llm_client.feature  nrv_rs_primitives.feature
(+63 files in other folders)
