[package]
name = "nrv-rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "1"
nrv-ui = { path = "../nrv-ui" }
diffy = "0.3"
hex = "0.4"
sha2 = "0.10"
nrv-orch-client = { path = "../nrv-orch-client" }

[dev-dependencies]
cucumber = { version = "0.20", features = ["macros"] }
tokio = { version = "1.39", features = ["macros", "rt", "rt-multi-thread"] }
tempfile = "3"
